# Roommaker-Studio

./: .gitignore  CMakeLists.txt  README.md  build.h.in  wingen17.bat
extlibs/: CMakeLists.txt
extlibs/wxWidgets/: CMakeLists.txt
include/Editor/: Editor.h  EditorFrame.h  RoomProperties.h  RoomTree.h  RoomView.h  RoomViewer.h  SFMLCanvas.h
include/Gamemaker/: Folder.h  GM.h  Object.h  Project2.h  Room.h  Sprite.h  TileSet.h
include/Gamemaker/Room/: Graphic.h  Instance.h  Layer.h  View.h
include/Gamemaker/Room/Layer/: AssetLayer.h  BackgroundLayer.h  InstanceLayer.h  TileMapLayer.h
include/Platform/: Platform.h  PlatformDeduction.h
src/Editor/: Editor.cpp  EditorFrame.cpp  RoomProperties.cpp  RoomTree.cpp  RoomView.cpp  RoomViewer.cpp  SFMLCanvas.cpp  TempMain.cpp
src/Gamemaker/: Folder.cpp  GM.cpp  Object.cpp  Project2.cpp  Room.cpp  Sprite.cpp  TileSet.cpp
src/Gamemaker/Room/: Graphic.cpp  Instance.cpp  Layer.cpp  View.cpp
src/Gamemaker/Room/Layer/: AssetLayer.cpp  BackgroundLayer.cpp  InstanceLayer.cpp  TileMapLayer.cpp
src/Platform/: PlatformUniversal.cpp  PlatformWindows.cpp  platformLinux.cpp
